# MediaSDK

./: parfile  parfile.overlay
samples/sample_common/include/: sample_utils.h
samples/sample_common/src/: sample_utils.cpp
samples/sample_multi_transcode/: CMakeLists.txt
samples/sample_multi_transcode/include/: pipeline_transcode.h
samples/sample_multi_transcode/src/: pipeline_transcode.cpp  sample_multi_transcode.cpp  transcode_utils.cpp
tutorials/common/: ffmpeg_utils.cpp  ffmpeg_utils.h
